-implement more compact spacing -edits to phase 3 -maria's changes to project description -change aims to phases -relocate fire paragraph to beginning of proj desc

--- a/NSFmaster.tex
+++ b/NSFmaster.tex
@@ -27,8 +27,8 @@
 \renewcommand{\refname}{\centering{References Cited}}                   
 
 \titlespacing*{\section}{0pt}{2.15ex}{1.25ex}
-%\titlespacing*{\subsection}{0pt}{2.025ex}{0.85ex}
-%\titlespacing*{\paragraph}{0pt}{2.025pt}{0.85ex}
+\titlespacing*{\subsection}{0pt}{2.025ex}{0.85ex}
+\titlespacing*{\paragraph}{0pt}{2.025pt}{0.85ex}
 
 \fancypagestyle{nsfplain}{%\fancyhf{} % clear all header and footer fields
 \lhead{Christopher J. Friedline}
