--- a/refs.bib
+++ b/refs.bib
@@ -771,6 +771,76 @@ pages = {1586--1591},
 month = aug
 }
 
+@article{Morell:to,
+author = {Morell, V},
+title = {{TreeBASE: the roots of phylogeny}},
+journal = {Science},
+volume = {273},
+pages = {569}
+}
+
+@article{Benson:2012kf,
+author = {Benson, Dennis A and Karsch-Mizrachi, Ilene and Clark, Karen and Lipman, David J and Ostell, James and Sayers, Eric W},
+title = {{GenBank.}},
+journal = {Nucleic Acids Research},
+year = {2012},
+volume = {40},
+number = {Database issue},
+pages = {D48--53},
+month = jan
+}
+
+@article{Gernandt:2008df,
+author = {Gernandt, David S. and Magallon, Susana and Lopez, Gretel Geada and Flores, Omar Zeron and Willyard, Ann and Liston, Aaron},
+title = {{Use of Simultaneous Analyses to Guide Fossil-Based Calibrations of Pinaceae Phylogeny}},
+journal = {International Journal Of Plant Sciences},
+year = {2008},
+volume = {169},
+number = {8},
+pages = {1086--1099}
+}
+
+@article{Willyard:2007in,
+author = {Willyard, Ann and Ann, Willyard and Syring, John and Gernandt, David S. and Liston, Aaron and Cronn, Richard},
+title = {{Fossil calibration of molecular divergence infers a moderate mutation rate and recent radiations for pinus.}},
+journal = {Molecular Biology and Evolution},
+year = {2007},
+volume = {24},
+number = {1},
+pages = {90--101},
+month = jan
+}
+
+@article{Pagel:2004ic,
+author = {Pagel, Mark M and Meade, Andrew A and Barker, Daniel D},
+title = {{Bayesian estimation of ancestral character states on phylogenies.}},
+journal = {Systematic biology},
+year = {2004},
+volume = {53},
+number = {5},
+pages = {673--684},
+month = oct
+}
+
+@article{Eckert:2006iw,
+author = {Eckert, Andrew J AJ and Hall, Benjamin D BD},
+title = {{Phylogeny, historical biogeography, and patterns of diversification for Pinus (Pinaceae): phylogenetic tests of fossil-based hypotheses.}},
+journal = {Molecular phylogenetics and evolution},
+year = {2006},
+volume = {40},
+number = {1},
+pages = {166--182},
+month = jul
+}
+
+
+
+
+
+
+
+
+
 
 
 
