--- a/NSFdesc.tex
+++ b/NSFdesc.tex
@@ -36,6 +36,14 @@
 \end{wrapfigure}
 
 
+Fire has been crucial influence in global ecosystem processes, driving not only locally adapted phenotypes in plant populations 
+\citep{Lamont:1991js,Vega:2008vk,Midgley:2011dw,Keeley:2011jw,He:2012bz,Parchman:2012ca}, 
+but also impacting carbon storage and climate \citep{Bowman:2009kp}.  Understanding the underlying genetic architecture 
+associated with fire-associated traits is therefore critical to dealing with environmental impacts of increased carbon inputs and 
+changing climate.  \citet{He:2012bz} recently investigated five fire-adapted traits for 101 species of \emph{Pinus} and found evidence 
+for a strong influence of fire in the Cretaceous on trait evolution.  However, they considered only presence or absence the traits in 
+their study.  \textbf{There have been no studies to date which capture, as in this proposal, the quantitative nature of fire-associated trait 
+evolution in these species.}.  
 
 The PI will investigate local adaptation of a complex trait in 2000 trees from four, economically-important species of pines with a range along 
 the eastern and south-eastern United States (25 trees from 20 populations for each specie).  The PI will study 
@@ -51,17 +59,6 @@ sizes \citep{Neale:2004hi}; this is partly why association genetic studies have 
 Additionally, because linkage disequilibrium is low in conifer populations, it is possible to detect frequency differences in alleles significantly 
 associated with ecologically-relevant phenotypes \citep{Neale:2004hi}. 
 
-Fire has been crucial influence in global ecosystem processes, driving not only locally adapted phenotypes in plant populations 
-\citep{Lamont:1991js,Vega:2008vk,Midgley:2011dw,Keeley:2011jw,He:2012bz,Parchman:2012ca}, 
-but also impacting carbon storage and climate \citep{Bowman:2009kp}.  Understanding the underlying genetic architecture 
-associated with fire-associated traits is therefore critical to dealing with environmental impacts of increased carbon inputs and 
-changing climate.  \citet{He:2012bz} recently investigated five fire-adapted traits for 101 species of \emph{Pinus} and found evidence 
-for a strong influence of fire in the Cretaceous on trait evolution.  However, they considered only presence or absence the traits in 
-their study.  \textbf{There have been no studies to date which capture, as in this proposal, the quantitative nature of fire-associated trait 
-evolution in these species.}.  
-
-
-
 The application of next-generation sequencing technology to conifer genomes, as proposed in this study, holds the promise of 
 being able to provide a way to dissect the genetic architecture of an adaptive, and quantitative trait.  Until recently, techniques 
 to consider adaptation on a genomic scale have been no match for the size and complexity of conifer genomes \citep{Mackay:2012hr}.  
@@ -72,9 +69,9 @@ to consider adaptation on a genomic scale have been no match for the size and co
 	\gantttitle{2013}{4}
 	\gantttitle{2014}{4}
 	\gantttitle{2015}{4}\\
-	\ganttbar{Aim 1}{1}{4.5}\\
-	\ganttbar{Aim 2}{3.5}{8.5}\\
-	\ganttbar{Aim 3}{8.5}{12}
+	\ganttbar{Phase 1}{1}{4.5}\\
+	\ganttbar{Phase 2}{3.5}{8.5}\\
+	\ganttbar{Phase 3}{8.5}{12}
 	\end{ganttchart}
 \caption{Project timeline}
 \vspace{-10pt}
@@ -87,10 +84,10 @@ sophistication of the sequencing facilities at VCU coupled with his backgrounds 
 computational biology to study how thick bark has evolved across \emph{Pinus} and how this knowledge may serve to 
 inform ecologically-relevant and economically-important decisions related this important genus.
 
-This study is laid out below in three general aims: (1) field sampling, (2) DNA sequencing and bioinformatics, and (3) 
+This study is laid out below in three general phases: (1) field sampling, (2) DNA sequencing and bioinformatics, and (3) 
 hypothesis testing.  A projected timeline for this project is shown in Figure \ref{f:timeline}.
 
-\subsection*{Aim 1: Collect field samples, extract genomic DNA, and prepare sequencing libraries}
+\subsection*{Phase 1: Collect field samples, extract genomic DNA, and prepare sequencing libraries}
 
 \paragraph{Field sampling}
 
@@ -100,7 +97,6 @@ of the focal species will be chosen and all other members will be chosen from wi
 the requirement of having DBH of at least \SI{15}{\cm}.  Three to five needle fascicles will be collected at each from each 
 tree for use in DNA extraction.  Needles, with a desiccant, will be stored in \SI{15}{\ml} Falcon\texttrademark\ tubes  at 
 ambient temperatures in the field and in \SI{-80}{\celsius}, long-term in the laboratory.  
-
 
 Thick bark will be treated as a quantitative character and will be estimated for each tree using a regression model based 
 upon tree height and diameter at breast height (DBH) \citep{Cao:1986th, Li:2010bl}.  Measurements of tree height will be obtained using a 
@@ -118,10 +114,11 @@ protocol in the Eckert lab.  A single DNA extraction from multiple leaves per in
 individual genomic DNA extracts.  
 
 \paragraph{Criteria for completion}
-Aim 1 will be designated complete when genomic DNA has been extracted for all \num{2000} individuals.  It is estimated that this will be 
-complete by June 2014.
+Aim 1 will be designated complete when genomic DNA has been extracted for all \num{2000} individuals.  DNA quantitation data as well 
+as sample metadata will be stored in a relational database management system (RDBMS) that will also house sequencing and 
+genotyping data from phase 2.  It is estimated that phase 1 will be complete by June 2014.
 
-\subsection*{Aim 2: Perform sequencing of 2000 individuals and bioinformatic analysis}
+\subsection*{Phase 2: Perform sequencing of 2000 individuals and bioinformatic analysis}
 
 The PI will perform genotype-by-sequencing (GBS) utilizing the highly-multiplexed, next-generation sequencing capability of the 
 Illumina HiSeq 2000 platform.  Genomic enrichment will be performed using the approach approach outlined in 
@@ -130,22 +127,20 @@ Illumina HiSeq 2000 platform.  Genomic enrichment will be performed using the ap
 barcode \citep{Roche454MID}.  
 Briefly, the genomic DNA from an individual is digested with two different restriction enzymes coupled with Illumina-specific 
 adaptor ligation.  The product is amplified by PCR and size selected on an agarose gel, which produces a pool of fragments for 
-sequencing.  Estimates for sequencing include approximately 100 individuals per lane on an eight-lane flow cell, with a 
-per-lane yield of 200 million reads in a paired-end reaction.  All costs for sequencing will be absorbed by the Eckert lab.  
-The result of this aim will be individual FASTQ files, one for each lane in the flow cell containing reads for each multiplexed 
-sample in that lane, for each flow cell that is used.  So, if 100 trees are multiplexed per lane, 2.5 flow cells will be needed for 
-20 lanes of sequencing.  These 20 lanes will produce four billion reads in total (approximately 8 terabases).  
+sequencing.  Sequencing will produceindividual FASTQ files, one for each lane in the flow cell containing reads for each multiplexed 
+sample in that lane, for each flow cell that is used.  Estimates for sequencing include approximately 100 individuals per lane on an 
+eight-lane flow cell, with a per-lane yield of 200 million reads in a paired-end reaction.  For 2000 trees, the amount of sequence data 
+will approach 8 TB (terabases).  All costs for sequencing will be absorbed by the Eckert lab.   
 
-The Nucleic Acids Research Facility (NARF) at VCU is currently producing paired-end reads of 150 bases, but due to the 
-specific error profile of Illumina data, not all of the data is immediately useful.  Using software that the PI has already written 
-\citep{code:2008wq} coupled with existing libraries (e.g., BioPython \citep{Cock:2009hj}, NGS QC Toolkit 
+The Nucleic Acids Research Facility (NARF) at VCU is currently producing paired-end reads of 150 bases.  Using software that the 
+PI has already written \citep{code:2008wq} coupled with existing libraries (e.g., BioPython \citep{Cock:2009hj}, NGS QC Toolkit 
 \citep{Patel:2012fq}), the processed sequencing data computationally divided into individuals and will be purged of 
 low-quality reads. Additionally, reads that meet acceptance criteria globally, but possess bases (most often at the 3' end) 
 that have low quality scores, will be trimmed and retained.  The processed sequence data will be stored in both compressed 
 FASTA data for distribution via FTP as well as in a relational database to enable both sample tracking and metadata association.
 
 Once quality-controlled reads are obtained for each individual (and each population), they will be aligned (mapped) to the 
-most current draft genome of \emph{P. taeda}, available from \url{dendrome.ucdavis.edu}, using the Burroughs-Wheeler aligner 
+most current draft genome of \emph{P. taeda}, available from Dendrome (\url{dendrome.ucdavis.edu}), using the Burroughs-Wheeler aligner 
 (BWA) \citep{Li:2009fi}, and SNPs will be called.  Because loblolly pine is in both our experimental sample as well as the source 
 of the reference genome, we have a unique opportunity to get a measure of confidence in the read mapping algorithms such as 
 BWA as well as in the overall sequencing quality of our data.  A SNP is called at particular alignment positions if there are enough 
@@ -162,7 +157,7 @@ in a relational database system.  The sequence data will be made available to th
 mapping to the loblolly genome and SNP calling will result in a sample by SNP matrix.  This aim is the most computationally 
 complex, and should be complete in early summer 2015.  
 
-\subsection*{Aim 3: Perform statistical analysis and hypothesis testing}
+\subsection*{Phase 3: Perform statistical analysis and hypothesis testing}
 
 \subsubsection*{Question 1: What is the genetic architecture of the thick bark phenotype for the four focal pine species that 
 are adapted to fire?}
@@ -172,15 +167,15 @@ phenotypes in any of the four species.
 
 \paragraph{Methods} The PI will employ standard linear models that correct for kinship and population structure that are 
 commonly used in genome-wide association studies (GWAS; \citet{Yu:2006ij}). Association analysis has been widely 
-used in and has for dissecting the genetic basis of phenotypes for conifers \citep{Neale:2011jh, Ingvarsson:2011fg}. 
+used for dissecting the genetic basis of phenotypes for conifers \citep{Neale:2011jh, Ingvarsson:2011fg}. 
 In addition, the PI will explore the use of the Bayesian models presented by \citet{Parchman:2012ca}, which 
 was the first GWAS for a conifer, and regression tree approaches presented by \citet{Holliday:2012fz}. 
 Linear models will be used to explicitly test the effects of genotypic class of each discovered SNP on quantitative 
 measures of bark thickness for each species. Thus, the number of tests for genotypic effects for each species will 
 be equal to the number of discovered SNPs, which is expected to be in the range of \num{50000} to \num{100000}. 
-\citet{Parchman:2012ca}. Multiple tests will be accounted for using a permutation approach that adjusts the 
+\citep{Parchman:2012ca}. Multiple tests will be accounted for using a permutation approach that adjusts the 
 global significance level (e.g., $\alpha= 0.05$). In brief, this procedure randomizes genotypic vectors relative to the 
-phenotypic vector to produce a large number of randomized data sets (e.g. \num{10000}). For each randomized data 
+phenotypic vector to produce a large number of randomized data sets (e.g., \num{10000}). For each randomized data 
 set, the association analysis is conducted again and the minimum \emph{P}-value associated with a genotypic effect is 
 retained. Finally, the multiple-test corrected $\alpha = 0.05$ is then the \SI{5}{\percent} quantile of the distribution of 
 minimum \emph{P}-value. 
@@ -207,7 +202,7 @@ calls can be quantified because the genome of the reference organism is represen
 To evaluate ${H_{0}}^2$, the union of all SNPs associated with bark thickness 
 will be created. The fraction of this list that is shared across all four species will be used as a test statistic, the magnitude 
 of which will be tested via a simple permutation analysis. The PI will construct a null distribution for the fraction of alleles 
-shared across all four species for sets of SNPs randomly selected from those unassociated to bark thickness (see Question 1). 
+shared across all four species for sets of SNPs randomly selected from those unassociated to bark thickness. 
 
 Allele sharing across species is common among conifer species and has been attributed largely to incomplete lineage 
 sorting resulting from recent divergence times and large effective population sizes \citep{Syring:2007gd,Willyard:2009ez}, 
@@ -230,7 +225,6 @@ establish that a process beyond incomplete lineage sorting, admixture and gene f
 maintenance of trans-species 
 polymorphisms across the four focal species. 
 
-
 \subsubsection*{Question 3: Are reconstructed allele frequencies at shared SNPs that are associated with bark thickness 
 correlated more so with reconstructed bark thickness than randomly selected shared SNPs that are unassociated with bark 
 thickness across the phylogeny for these four species?}
@@ -240,16 +234,15 @@ bark thickness and reconstructed values of bark thickness are no larger than tho
 randomly chosen SNPs unassociated with bark thickness.
 
 \paragraph{Methods} Phylogenies and associated data matrices for genus \emph{Pinus} will be obtained from 
-TreeBASE and GenBank. Most data matrices are constructed primarily from cpDNA coding sequences 
-(e.g. Eckert and Hall 2006; Gernandt et al. 2008) and cpDNA genome sequences (e.g. Parks et al., 2008). 
-Chronograms will be obtained using the fossil calibration points from Willyard et al. (2008). 
-{Chris: insert some language about how the final tree will be constructed [supertree, supermatrix] 
-or are we just using the one from He et al. 2012?} Once a set of plausible chronograms has been 
+TreeBASE \citep{Morell:to} and GenBank \citep{Benson:2012kf}. Most data matrices are constructed primarily from 
+cpDNA coding sequences \citep{Eckert:2006iw, Gernandt:2008df} and cpDNA genome sequences (e.g. Parks et al., 2008). 
+Chronograms will be obtained using the fossil calibration points from \citet{Willyard:2007in} as presented in \citet{He:2012bz}. 
+Once a set of plausible chronograms has been 
 generated, bark thickness and allele frequencies within lineages will be reconstructed as quantitative 
-characters using a Bayesian method (i.e. BayesTraits, see Pagel 1997, 1999). 
-Specifically, we will utilize a set of plausible chronograms (n =  10,000) to account for uncertainty in 
+characters using a Bayesian method \citep{Pagel:2004ic}.
+Specifically, we will utilize a set of plausible chronograms (n =  \num{10,000}) to account for uncertainty in 
 phylogenetic tree and the character states in combination with phylogenetically informed multiple 
-regression analyses (available in BayesTraits as BayesContinuous) to test the association with 
+regression analyses, available in BayesTraits as BayesContinuous \citep{Pagel:2004ic},  to test the association with 
 reconstructed SNP allele frequencies and bark thickness for two types of SNPs: those shared across 
 all four species and associated with bark thickness versus those shared across all four species and 
 unassociated with bark thickness. Allele frequencies and bark thickness will be specified for each species 
@@ -287,7 +280,7 @@ natural populations.
 This project will benefit both the local and global scientific communities, as well as help train 
 the next generation of multi-discipline scientists in the world of big data.  First, as soon as the data is curated, it will be made 
 available for download and exploration from FTP and web sites hosted here at VCU.  Second, the PI will develop and teach a new 
-three-credit course, BIOL 591 Applied Ecological Genomics, which will train advanced undergraduates and established 
+three-credit course, BIOL 591 Applied Ecological Genomics, which will train advanced undergraduates and 
 graduate students, using the data generated in this project, in skills necessary to both understand the 
 technology available at VCU (e.g., Illumina HiSeq/MiSeq, 454, IonTorrent), and to 
 process (via programming), manage (via databases), and analyze the deluge of data generated from current genomics 
