-add urls to and correct bibtex entries

--- a/refs.bib
+++ b/refs.bib
@@ -6,7 +6,8 @@ year = {2004},
 volume = {431},
 number = {7005},
 pages = {152--155},
-month = sep
+month = sep,
+url = {http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=15356622&retmode=ref&cmd=prlinks}
 }
 
 @article{Lake:2004cy,
@@ -17,7 +18,8 @@ year = {2004},
 volume = {21},
 number = {4},
 pages = {681--690},
-month = apr
+month = apr,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=14739244&retmode=ref&cmd=prlinks}
 }
 
 @article{Friedline:2012fm,
@@ -27,7 +29,8 @@ journal = {Biogeosciences},
 year = {2012},
 volume = {9},
 number = {6},
-pages = {2177--2193}
+pages = {2177--2193},
+url={http://www.biogeosciences.net/9/2177/2012/}
 }
 
 %% Created using Papers on Tue, 16 Oct 2012.
@@ -36,22 +39,24 @@ pages = {2177--2193}
 @article{Tapias:2004db,
 author = {Tapias, Raul and Climent, Jos{\'e} and Pardos, Jose A and Gil, Luis},
 title = {{Life histories of Mediterranean pines}},
-journal = {Plant Ecology (formerly Vegetatio)},
+journal = {Plant Ecology},
 year = {2004},
 volume = {171},
 number = {1/2},
-pages = {53--68}
+pages = {53--68},
+url={http://www.springerlink.com/openurl.asp?id=doi:10.1023/B:VEGE.0000029383.72609.f0}
 }
 
 @article{Eckert:2010hd,
 author = {Eckert, Andrew J and van Heerwaarden, Joost and Wegrzyn, Jill L and Nelson, C Dana and Ross-Ibarra, Jeffrey and Gonz{\'a}lez-Mart{\'\i}nez, Santiago C and Neale, David B},
-title = {{Patterns of population structure and environmental associations to aridity across the range of loblolly pine (Pinus taeda L., Pinaceae).}},
+title = {{Patterns of population structure and environmental associations to aridity across the range of loblolly pine (\emph{Pinus taeda} L., Pinaceae).}},
 journal = {Genetics},
 year = {2010},
 volume = {185},
 number = {3},
 pages = {969--982},
-month = jul
+month = jul,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=20439779&retmode=ref&cmd=prlinks}
 }
 
 @article{Wymore:2011bm,
@@ -62,93 +67,102 @@ year = {2011},
 volume = {191},
 number = {1},
 pages = {19--36},
-month = jul
+month = jul,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=21631507&retmode=ref&cmd=prlinks}
 }
 
 @article{Quesada:2010iu,
 author = {Quesada, Tania and Gopal, Vikneswaran and Cumbie, W Patrick and Eckert, Andrew J and Wegrzyn, Jill L and Neale, David B and Goldfarb, Barry and Huber, Dudley A and Casella, George and Davis, John M},
-title = {{Association mapping of quantitative disease resistance in a natural population of loblolly pine (Pinus taeda L.).}},
+title = {{Association mapping of quantitative disease resistance in a natural population of loblolly pine (\emph{Pinus taeda} L.).}},
 journal = {Genetics},
 year = {2010},
 volume = {186},
 number = {2},
 pages = {677--686},
-month = oct
+month = oct,
+url={http://www.genetics.org/content/186/2/677.short}
 }
 
 @article{Cosart:2011bq,
 author = {Cosart, Ted and Beja-Pereira, Albano and Chen, Shanyuan and Ng, Sarah B and Shendure, Jay and Luikart, Gordon},
 title = {{Exome-wide DNA capture and next generation sequencing in domestic and wild species.}},
-journal = {BMC genomics},
+journal = {BMC Genomics},
 year = {2011},
 volume = {12},
-pages = {347--347}
+pages = {347--347},
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=21729323&retmode=ref&cmd=prlinks}
 }
 
 @article{Meyer:2010eh,
 author = {Meyer, Matthias and Kircher, Martin},
 title = {{Illumina sequencing library preparation for highly multiplexed target capture and sequencing.}},
-journal = {Cold Spring Harbor protocols},
+journal = {Cold Spring Harbor Protocols},
 year = {2010},
 volume = {2010},
 number = {6},
 pages = {pdb.prot5448},
-month = jun
+month = jun,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=20516186&retmode=ref&cmd=prlinks}
 }
 
 @article{Eckert:2008ck,
 author = {Eckert, Andrew J and Pande, Barnaly and Ersoz, Elhan S and Wright, Mark H and Rashbrook, Vanessa K and Nicolet, Charles M and Neale, David B},
-title = {{High-throughput genotyping and mapping of single nucleotide polymorphisms in loblolly pine (Pinus taeda L.)}},
+title = {{High-throughput genotyping and mapping of single nucleotide polymorphisms in loblolly pine (\emph{Pinus taeda} L.)}},
 journal = {Tree Genetics {\&} Genomes},
 year = {2008},
 volume = {5},
 number = {1},
 pages = {225--234},
-month = nov
+month = nov,
+url={http://www.springerlink.com/index/10.1007/s11295-008-0183-8}
 }
 
 @article{GonzalezMartinez:2007gy,
 author = {Gonz{\'a}lez-Mart{\'\i}nez, Santiago C and Wheeler, Nicholas C and Ersoz, Elhan and Nelson, C Dana and Neale, David B},
-title = {{Association genetics in Pinus taeda L. I. Wood property traits.}},
+title = {{Association genetics in \emph{Pinus taeda} L. I. Wood property traits.}},
 journal = {Genetics},
 year = {2007},
 volume = {175},
 number = {1},
 pages = {399--409},
-month = jan
+month = jan,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=17110498&retmode=ref&cmd=prlinks}
 }
 
 @article{Moya:2008ek,
 author = {Moya, Daniel and Saracino, Antonio and Salvatore, Rossella and Lovreglio, Raffaella and de Las Heras, Jorge and Leone, Vittorio},
-title = {{Anatomic basis and insulation of serotinous cones in Pinus halepensis Mill}},
-journal = {Trees: Structure and Function},
+title = {{Anatomic basis and insulation of serotinous cones in \emph{Pinus halepensis} Mill}},
+journal = {Trees},
 year = {2008},
 volume = {22},
 number = {4},
 pages = {511--519},
-month = aug
+month = aug,
+url={http://www.springerlink.com/content/b351066m25q51139/}
 }
 
 @article{Eckert:2009ja,
 author = {Eckert, Andrew J and Wegrzyn, Jill L and Pande, Barnaly and Jermstad, Kathleen D and Lee, Jennifer M and Liechty, John D and Tearse, Brandon R and Krutovsky, Konstantin V and Neale, David B},
-title = {{Multilocus patterns of nucleotide diversity and divergence reveal positive selection at candidate genes related to cold hardiness in coastal Douglas Fir (Pseudotsuga menziesii var. menziesii).}},
+title = {{Multilocus patterns of nucleotide diversity and divergence reveal positive selection at candidate genes related to cold hardiness in coastal Douglas Fir (\emph{Pseudotsuga menziesii} var. \emph{menziesii}).}},
 journal = {Genetics},
 year = {2009},
 volume = {183},
 number = {1},
 pages = {289--298},
-month = sep
+month = sep,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=19596906&retmode=ref&cmd=prlinks}
 }
 
 @article{Eckert:2009hh,
 author = {Eckert, Andrew J and Bower, Andrew D and Wegrzyn, Jill L and Pande, Barnaly and Jermstad, Kathleen D and Krutovsky, Konstantin V and St Clair, J Bradley and Neale, David B},
-title = {{Association genetics of coastal Douglas fir (Pseudotsuga menziesii var. menziesii, Pinaceae). I. Cold-hardiness related traits.}},
+title = {{Association genetics of coastal Douglas fir (\emph{Pseudotsuga menziesii} var. \emph{menziesii}, Pinaceae). I. Cold-hardiness related traits.}},
 journal = {Genetics},
 year = {2009},
 volume = {182},
 number = {4},
 pages = {1289--1302},
-month = aug
+month = aug,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=19487566&retmode=ref&cmd=prlinks}
 }
 
 @article{Hirschhorn:2005ck,
@@ -159,17 +173,19 @@ year = {2005},
 volume = {6},
 number = {2},
 pages = {95--108},
-month = feb
+month = feb,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=15716906&retmode=ref&cmd=prlinks}
 }
 
 @article{Schwilk:2001jd,
 author = {Schwilk, D W and Ackerly, D D},
 title = {{Flammability and serotiny as strategies: correlated evolution in pines}},
-journal = {Nature methods},
+journal = {Nature Methods},
 year = {2001},
 volume = {94},
 number = {2},
-pages = {326--336}
+pages = {326--336},
+url={http://onlinelibrary.wiley.com/doi/10.1034/j.1600-0706.2001.940213.x/abstract}
 }
 
 @article{Neale:2007fe,
@@ -180,29 +196,32 @@ year = {2007},
 volume = {17},
 number = {6},
 pages = {539--544},
-month = dec
+month = dec,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=18060764&retmode=ref&cmd=prlinks}
 }
 
 @article{Hohenlohe:2010iu,
 author = {Hohenlohe, Paul A and Bassham, Susan and Etter, Paul D and Stiffler, Nicholas and Johnson, Eric A and Cresko, William A},
-title = {{Population Genomics of Parallel Adaptation in Threespine Stickleback using Sequenced RAD Tags.}},
-journal = {PLoS genetics},
+title = {{Population genomics of parallel adaptation in Threespine Stickleback using sequenced RAD tags.}},
+journal = {PLOS Genetics},
 year = {2010},
 volume = {6},
 number = {2},
 pages = {e1000862--e1000862},
-month = feb
+month = feb,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=20195501&retmode=ref&cmd=prlinks}
 }
 
 @article{GonzalezMartinez:2008gc,
 author = {Gonz{\'a}lez-Mart{\'\i}nez, S C and Huber, D and Ersoz, E and Davis, J M and Neale, D B},
-title = {{Association genetics in Pinus taeda L. II. Carbon isotope discrimination.}},
+title = {{Association genetics in \emph{Pinus taeda} L. II. Carbon isotope discrimination.}},
 journal = {Heredity},
 year = {2008},
 volume = {101},
 number = {1},
 pages = {19--26},
-month = jul
+month = jul,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=18478029&retmode=ref&cmd=prlinks}
 }
 
 @article{Eckert:2012go,
@@ -213,18 +232,20 @@ year = {2012},
 volume = {21},
 number = {12},
 pages = {2836--2838},
-month = jun
+month = jun,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=22676074&retmode=ref&cmd=prlinks}
 }
 
 @article{He:2012bz,
 author = {He, Tianhua and Pausas, Juli G and Belcher, Claire M and Schwilk, Dylan W and Lamont, Byron B},
-title = {{Fire-adapted traits of Pinus arose in the fiery Cretaceous.}},
+title = {{Fire-adapted traits of \emph{Pinus} arose in the fiery Cretaceous.}},
 journal = {New Phytologist},
 year = {2012},
 volume = {194},
 number = {3},
 pages = {751--759},
-month = may
+month = may,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=22348443&retmode=ref&cmd=prlinks}
 }
 
 @article{Keeley:2011jw,
@@ -235,18 +256,20 @@ year = {2011},
 volume = {16},
 number = {8},
 pages = {406--411},
-month = aug
+month = aug,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=21571573&retmode=ref&cmd=prlinks}
 }
 
 @article{Grotkopp:2004hi,
 author = {Grotkopp, Eva E and Rejm{\'a}nek, Marcel M and Sanderson, Michael J MJ and Rost, Thomas L TL},
-title = {{Evolution of genome size in pines (Pinus) and its life-history correlates: supertree analyses.}},
-journal = {Evolution; international journal of organic evolution},
+title = {{Evolution of genome size in pines (\emph{Pinus}) and its life-history correlates: supertree analyses.}},
+journal = {Evolution},
 year = {2004},
 volume = {58},
 number = {8},
 pages = {1705--1729},
-month = aug
+month = aug,
+url={http://onlinelibrary.wiley.com/store/10.1111/j.0014-3820.2004.tb00450.x/asset/j.0014-3820.2004.tb00450.x.pdf?v=1&t=h8uusfdb&s=1117549af514e5a3ddd6ccbb80ecfbceb5773023}
 }
 
 @article{GonzalezMartinez:2006ij,
@@ -256,7 +279,8 @@ journal = {New Phytologist},
 year = {2006},
 volume = {170},
 number = {2},
-pages = {227--238}
+pages = {227--238},
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=16608450&retmode=ref&cmd=prlinks}
 }
 
 @article{Midgley:2011dw,
@@ -267,7 +291,8 @@ year = {2011},
 volume = {191},
 number = {1},
 pages = {5--7},
-month = jul
+month = jul,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=21631504&retmode=ref&cmd=prlinks}
 }
 
 @article{Gupta:2005fx,
@@ -278,7 +303,8 @@ year = {2005},
 volume = {57},
 number = {4},
 pages = {461--485},
-month = mar
+month = mar,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=15821975&retmode=ref&cmd=prlinks}
 }
 
 @article{Vega:2008vk,
@@ -288,7 +314,8 @@ journal = {Forest Ecology and Management},
 year = {2008},
 volume = {256},
 number = {9},
-pages = {1596--1603}
+pages = {1596--1603},
+url={http://www.sciencedirect.com/science/article/pii/S0378112708005628}
 }
 
 @article{Neale:2004hi,
@@ -299,7 +326,8 @@ year = {2004},
 volume = {9},
 number = {7},
 pages = {325--330},
-month = jul
+month = jul,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=15231277&retmode=ref&cmd=prlinks}
 }
 
 @article{Parchman:2012ca,
@@ -310,7 +338,8 @@ year = {2012},
 volume = {21},
 number = {12},
 pages = {2991--3005},
-month = jun
+month = jun,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=22676074&retmode=ref&cmd=prlinks}
 }
 
 @article{Gompert:2010kn,
@@ -321,17 +350,19 @@ year = {2010},
 volume = {19},
 number = {12},
 pages = {2455--2473},
-month = jun
+month = jun,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=20497324&retmode=ref&cmd=prlinks}
 }
 
 @article{Elshire:2011gn,
 author = {Elshire, Robert J and Glaubitz, Jeffrey C and Sun, Qi and Poland, Jesse A and Kawamoto, Ken and Buckler, Edward S and Mitchell, Sharon E},
 title = {{A robust, simple genotyping-by-sequencing (GBS) approach for high diversity species.}},
-journal = {Plos One},
+journal = {PLOS ONE},
 year = {2011},
 volume = {6},
 number = {5},
-pages = {e19379--e19379}
+pages = {e19379--e19379},
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=21573248&retmode=ref&cmd=prlinks}
 }
 
 @article{Andolfatto:2011du,
@@ -342,62 +373,68 @@ year = {2011},
 volume = {21},
 number = {4},
 pages = {610--617},
-month = apr
+month = apr,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=21233398&retmode=ref&cmd=prlinks}
 }
 
 @article{Lesser:2012en,
 author = {Lesser, Mark R MR and Parchman, Thomas L TL and Buerkle, C Alex CA},
 title = {{Cross-species transferability of SSR loci developed from transciptome sequencing in lodgepole pine.}},
-journal = {Molecular ecology resources},
+journal = {Molecular Ecology Resources},
 year = {2012},
 volume = {12},
 number = {3},
 pages = {448--455},
-month = may
+month = may,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=22171820&retmode=ref&cmd=prlinks}
 }
 
 @article{Hudson:2008jq,
 author = {Hudson, Matthew E},
 title = {{Sequencing breakthroughs for genomic ecology and evolutionary biology.}},
-journal = {Molecular ecology resources},
+journal = {Molecular Ecology Resources},
 year = {2008},
 volume = {8},
 number = {1},
 pages = {3--17},
-month = jan
+month = jan,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=21585713&retmode=ref&cmd=prlinks}
 }
 
 @article{Schatz:2012kz,
 author = {Schatz, Michael C and Witkowski, Jan and McCombie, W Richard},
-title = {{Current challenges in de novo plant genome sequencing and assembly.}},
+title = {{Current challenges in \emph{de novo} plant genome sequencing and assembly.}},
 journal = {Genome Biology},
 year = {2012},
 volume = {13},
 number = {4},
 pages = {243},
-month = apr
+month = apr,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=22546054&retmode=ref&cmd=prlinks}
 }
 
 @article{Baxter:2011bc,
 author = {Baxter, Simon W and Davey, John W and Johnston, J Spencer and Shelton, Anthony M and Heckel, David G and Jiggins, Chris D and Blaxter, Mark L},
 title = {{Linkage mapping and comparative genomics using next-generation RAD sequencing of a non-model organism.}},
-journal = {Plos One},
+journal = {PLOS ONE},
 year = {2011},
 volume = {6},
 number = {4},
 pages = {e19315--e19315},
-month = jan
+month = jan,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=21541297&retmode=ref&cmd=prlinks}
 }
 
 @article{Craig:2008ep,
 author = {Craig, David W and Pearson, John V and Szelinger, Szabolcs and Sekar, Aswin and Redman, Margot  and Corneveaux, Jason J  and Pawlowski, Traci L  and Laub, Trisha and Nunn, Gary  and Stephan, Dietrich A  and Homer, Nils  and Huentelman, Matthew J },
 title = {{Identification of genetic variants using bar-coded multiplexed sequencing.}},
-journal = {Nature methods},
+journal = {Nature Methods},
 year = {2008},
 volume = {5},
 number = {10},
 pages = {887--893},
-month = oct
+month = oct,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=18794863&retmode=ref&cmd=prlinks}
 }
 
 @article{Stinchcombe:2008ca,
@@ -408,16 +445,18 @@ year = {2008},
 volume = {100},
 number = {2},
 pages = {158--170},
-month = feb
+month = feb,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=17314923&retmode=ref&cmd=prlinks}
 }
 
 @article{Cao:1986th,
 author = {Cao, Quang V and Pepper, William D},
-title = {{Predicting Inside Bark Diameter for Shortleaf, Loblolly, and Longleaf Pines}},
+title = {{Predicting inside bark diameter for Shortleaf, Loblolly, and Longleaf pines}},
 journal = {Southern Journal of Applied Forestry},
 year = {1986},
 volume = {10},
-pages = {220--224}
+pages = {220--224},
+url={http://www.ingentaconnect.com/content/saf/sjaf/1986/00000010/00000004/art00013}
 }
 
 @article{Li:2010bl,
@@ -428,18 +467,20 @@ year = {2010},
 volume = {130},
 number = {2},
 pages = {219--233},
-month = aug
+month = aug,
+url={http://www.springerlink.com/index/10.1007/s10342-010-0423-y}
 }
 
 @article{Yu:2006ij,
 author = {Yu, Jianming and Pressoir, Gael and Briggs, William H and Bi, Irie Vroh and Yamasaki, Masanori and Doebley, John F and McMullen, Michael D and Gaut, Brandon S. and Nielsen, Dahlia M and Holland, James B and Kresovich, Stephen and Buckler, Edward S},
 title = {{A unified mixed-model method for association mapping that accounts for multiple levels of relatedness.}},
-journal = {Nature genetics},
+journal = {Nature Genetics},
 year = {2006},
 volume = {38},
 number = {2},
 pages = {203--208},
-month = feb
+month = feb,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=16380716&retmode=ref&cmd=prlinks}
 }
 
 @article{Bowman:2009kp,
@@ -450,33 +491,29 @@ year = {2009},
 volume = {324},
 number = {5926},
 pages = {481--484},
-month = apr
+month = apr,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=19390038&retmode=ref&cmd=prlinks}
 }
 
 @incollection{Keeley:2003vn,
 author = {Keeley, Jon E and Zedler, Paul H},
-title = {{Evolution of life histories in Pinus}},
-booktitle = {Ecology and Biogeography of Pinus},
+title = {{Evolution of life histories in \emph{Pinus}}},
+booktitle = {Ecology and Biogeography of \emph{Pinus}},
 year = {1998},
 editor = {Richardson, D M},
 pages = {219--249},
 publisher = {Cambridge University Press},
-address = {Cambridge, UK},
+address = {Cambridge, UK}
 }
 
-@manual{Pagel:2007ux,
-title = {{BayesTraits}},
-author = {Pagel, Mark and Meade, Andrew},
-year = {2007}
-}
 
 @article{Mackay:2012hr,
 author = {Mackay, John and Dean, Jeffrey F D and Plomion, Christophe and Peterson, Daniel G and C{\'a}novas, Francisco M and Pavy, Nathalie and Ingvarsson, P{\"a}r K and Savolainen, Outi and Guevara, M {\'A}ngeles and Fluch, Silvia and Vinceti, Barbara and Abarca, Dolores and D{\'\i}az-Sala, Carmen and Cervera, Mar{\'\i}a-Teresa},
 title = {{Towards decoding the conifer giga-genome}},
 journal = {Plant Molecular Biology},
 year = {2012},
-pages = {--},
-month = sep
+month = sep,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=22960864&retmode=ref&cmd=prlinks}
 }
 
 @misc{code:2008wq,
@@ -495,7 +532,8 @@ year = {2009},
 volume = {25},
 number = {16},
 pages = {2078--2079},
-month = aug
+month = aug,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=19505943&retmode=ref&cmd=prlinks}
 }
 
 @article{Li:2009fi,
@@ -506,15 +544,18 @@ year = {2009},
 volume = {25},
 number = {14},
 pages = {1754--1760},
-month = jul
+month = jul,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=19451168&retmode=ref&cmd=prlinks}
 }
 
 @article{Li:2011cu,
 title = {{A statistical framework for SNP calling, mutation discovery, association mapping and population genetical parameter estimation from sequencing data}},
 journal = {Bioinformatics},
+volume = {27}
 year = {2011},
-pages = {--},
-month = sep
+pages = {2987--2993},
+month = sep,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=21903627&retmode=ref&cmd=prlinks}
 }
 
 @article{McKenna:2010bv,
@@ -525,17 +566,22 @@ year = {2010},
 volume = {20},
 number = {9},
 pages = {1297--1303},
-month = sep
+month = sep,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=20644199&retmode=ref&cmd=prlinks}
 }
 
 @article{You:2012iy,
-author = {You, N and Murillo, G and Cui, X and {9}},
-title = {{SNP calling using genotype model selection on high-throughput sequencing data}},
+author = {You, Na N and Murillo, Gabriel G and Su, Xiaoquan X and Zeng, Xiaowei X and Xu, Jian J and Ning, Kang K and Zhang, Shoudong S and Zhu, Jiankang J and Cui, Xinping X},
+title = {{SNP calling using genotype model selection on high-throughput sequencing data.}},
 journal = {Bioinformatics},
 year = {2012},
-pages = {--},
-month = jan
+volume = {28},
+number = {5},
+pages = {643--650},
+month = mar,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=22253293&retmode=ref&cmd=prlinks}
 }
+
 
 @article{Jakobsson:2005jo,
 author = {Jakobsson, A and Dinnetz, P},
@@ -544,17 +590,19 @@ journal = {Evolutionary Ecology},
 year = {2005},
 volume = {19},
 number = {5},
-pages = {449--466}
+pages = {449--466},
+url={http://www.springerlink.com/content/l091225053468730/}
 }
 
 @article{Leimu:2008fb,
 author = {Leimu, Roosa and Fischer, Markus},
 title = {{A meta-analysis of local adaptation in plants.}},
-journal = {Plos One},
+journal = {PLOS ONE},
 year = {2008},
 volume = {3},
 number = {12},
-pages = {e4010}
+pages = {e4010},
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=19104660&retmode=ref&cmd=prlinks}
 }
 
 @article{Bowman:2008hf,
@@ -565,29 +613,32 @@ year = {2008},
 volume = {96},
 number = {5},
 pages = {1056--1064},
-month = jan
+month = jan,
+url={http://onlinelibrary.wiley.com/store/10.1111/j.1365-2745.2008.01417.x/asset/j.1365-2745.2008.01417.x.pdf?v=1&t=h8uvmexs&s=209eeafc38366e5fb8e7f82071e96375d3843950}
 }
 
 @article{Wegrzyn:2010dd,
 author = {Wegrzyn, Jill L and Eckert, Andrew J and Choi, Minyoung and Lee, Jennifer M and Stanton, Brian J and Sykes, Robert and Davis, Mark F and Tsai, Chung-Jui and Neale, David B},
-title = {{Association genetics of traits controlling lignin and cellulose biosynthesis in black cottonwood (Populus trichocarpa, Salicaceae) secondary xylem.}},
+title = {{Association genetics of traits controlling lignin and cellulose biosynthesis in black cottonwood (\emph{Populus trichocarpa}, Salicaceae) secondary xylem.}},
 journal = {New Phytologist},
 year = {2010},
 volume = {188},
 number = {2},
 pages = {515--532},
-month = oct
+month = oct,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=20831625&retmode=ref&cmd=prlinks}
 }
 
 @article{Eckert:2012cw,
 author = {Eckert, Andrew J and Wegrzyn, Jill L and Cumbie, W Patrick and Goldfarb, Barry and Huber, Dudley A and Tolstikov, Vladimir and Fiehn, Oliver and Neale, David B},
-title = {{Association genetics of the loblolly pine (Pinus taeda, Pinaceae) metabolome.}},
+title = {{Association genetics of the loblolly pine (\emph{Pinus taeda}, Pinaceae) metabolome.}},
 journal = {New Phytologist},
 year = {2012},
 volume = {193},
 number = {4},
 pages = {890--902},
-month = mar
+month = mar,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=22129444&retmode=ref&cmd=prlinks}
 }
 
 @article{Lamont:1991js,
@@ -598,7 +649,8 @@ year = {1991},
 volume = {57},
 number = {4},
 pages = {277--317},
-month = oct
+month = oct,
+url={http://www.springerlink.com/index/10.1007/BF02858770}
 }
 
 @article{Willing:2011jb,
@@ -609,7 +661,8 @@ year = {2011},
 volume = {27},
 number = {16},
 pages = {2187--2193},
-month = aug
+month = aug,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=21712251&retmode=ref&cmd=prlinks}
 }
 
 @article{Cock:2009hj,
@@ -620,17 +673,19 @@ year = {2009},
 volume = {25},
 number = {11},
 pages = {1422--1423},
-month = jun
+month = jun,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=19304878&retmode=ref&cmd=prlinks}
 }
 
 @article{Patel:2012fq,
 author = {Patel, Ravi K and Jain, Mukesh},
 title = {{NGS QC Toolkit: a toolkit for quality control of next generation sequencing data.}},
-journal = {Plos One},
+journal = {PLOS ONE},
 year = {2012},
 volume = {7},
 number = {2},
-pages = {e30619--e30619}
+pages = {e30619--e30619},
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=22312429&retmode=ref&cmd=prlinks}
 }
 
 @article{Ingvarsson:2011fg,
@@ -641,7 +696,8 @@ year = {2011},
 volume = {189},
 number = {4},
 pages = {909--922},
-month = mar
+month = mar,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=21182529&retmode=ref&cmd=prlinks}
 }
 
 @article{Neale:2011jh,
@@ -652,40 +708,44 @@ year = {2011},
 volume = {12},
 number = {2},
 pages = {111--122},
-month = feb
+month = feb,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=21245829&retmode=ref&cmd=prlinks}
 }
 
 @article{Holliday:2012fz,
 author = {Holliday, Jason A JA and Wang, Tongli T and Aitken, Sally S},
-title = {{Predicting Adaptive Phenotypes From Multilocus Genotypes in Sitka Spruce (Picea sitchensis) Using Random Forest.}},
+title = {{Predicting adaptive phenotypes from multilocus genotypes in Sitka Spruce (\emph{Picea sitchensis}) Using Random Forest.}},
 journal = {G3: Genes, Genomes, Genetics},
 year = {2012},
 volume = {2},
 number = {9},
 pages = {1085--1093},
-month = sep
+month = sep,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=22973546&retmode=ref&cmd=prlinks}
 }
 
 @article{Syring:2007gd,
 author = {Syring, John and Farrell, Kathleen and Businsk{\'y}, Roman and Cronn, Richard and Liston, Aaron},
 title = {{Widespread genealogical nonmonophyly in species of Pinus subgenus Strobus.}},
-journal = {Systematic biology},
+journal = {Systematic Biology},
 year = {2007},
 volume = {56},
 number = {2},
 pages = {163--181},
-month = apr
+month = apr,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=17454973&retmode=ref&cmd=prlinks}
 }
 
 @article{Willyard:2009ez,
 author = {Willyard, Ann and Cronn, Richard and Liston, Aaron},
 title = {{Reticulate evolution and incomplete lineage sorting among the ponderosa pines.}},
-journal = {Molecular phylogenetics and evolution},
+journal = {Molecular Phylogenetics and Evolution},
 year = {2009},
 volume = {52},
 number = {2},
 pages = {498--511},
-month = aug
+month = aug,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=19249377&retmode=ref&cmd=prlinks}
 }
 
 @article{Liston:2007cx,
@@ -696,18 +756,20 @@ year = {2007},
 volume = {16},
 number = {18},
 pages = {3926--3937},
-month = sep
+month = sep,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=17850554&retmode=ref&cmd=prlinks}
 }
 
 @article{Zhou:2010hk,
 author = {Zhou, Yong Feng and Abbott, Richard J and Jiang, Zu Yao and Du, Fang K and Milne, Richard I and Liu, Jian Quan},
 title = {{Gene flow and species delimitation: a case study of two pine species with overlapping distributions in southeast China.}},
-journal = {Evolution; international journal of organic evolution},
+journal = {Evolution},
 year = {2010},
 volume = {64},
 number = {8},
 pages = {2342--2352},
-month = aug
+month = aug,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=20298431&retmode=ref&cmd=prlinks}
 }
 
 @article{Segurel:vf,
@@ -715,7 +777,8 @@ author = {S{\'e}gurel, Laure and Thompson, Emma E and Flutre, Timoth{\'e}e and L
 title = {{The ABO blood group is a trans-species polymorphism in primates.}},
 journal = {Proceedings Of The National Academy Of Sciences Of The United States Of America},
 year = {2012},
-month = oct
+month = oct,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=23091028&retmode=ref&cmd=prlinks}
 }
 
 @article{Becquet:2007js,
@@ -726,18 +789,20 @@ year = {2007},
 volume = {17},
 number = {10},
 pages = {1505--1519},
-month = oct
+month = oct,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=17712021&retmode=ref&cmd=prlinks}
 }
 
 @article{Roche454MID,
 author = {{454 Life Sciences Corp.}},
-title = {{Using Multiplex Identifier (MID) Adaptors for the GS FLX Titanium Chemistry - Extended MID Set
+title = {{Using multiplex identifier (MID) adaptors for the GS FLX Titanium chemistry - extended MID set
 }},
 journal = {Technical Bulletin},
 year = {2009},
 volume = {TCB 005-2009},
 pages = {1--7},
-month = apr
+month = apr,
+url={http://www.liv.ac.uk/media/livacuk/centreforgenomicresearch/The_GS_FLX_Titanium_Chemistry_Extended_MID_Set.pdf}
 }
 
 @article{Edgar:2004ic,
@@ -747,7 +812,8 @@ journal = {Bmc Bioinformatics},
 year = {2004},
 volume = {5},
 pages = {113},
-month = aug
+month = aug,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=15318951&retmode=ref&cmd=prlinks}
 }
 
 @article{Katoh:2005ia,
@@ -757,7 +823,8 @@ journal = {Nucleic Acids Research},
 year = {2005},
 volume = {33},
 number = {2},
-pages = {511--518}
+pages = {511--518},
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=15661851&retmode=ref&cmd=prlinks}
 }
 
 @article{Yang:2007ki,
@@ -768,7 +835,8 @@ year = {2007},
 volume = {24},
 number = {8},
 pages = {1586--1591},
-month = aug
+month = aug,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=17483113&retmode=ref&cmd=prlinks}
 }
 
 @article{Morell:to,
@@ -776,28 +844,31 @@ author = {Morell, V},
 title = {{TreeBASE: the roots of phylogeny}},
 journal = {Science},
 volume = {273},
-pages = {569}
+pages = {569},
+url={http://treebase.org}
 }
 
 @article{Benson:2012kf,
 author = {Benson, Dennis A and Karsch-Mizrachi, Ilene and Clark, Karen and Lipman, David J and Ostell, James and Sayers, Eric W},
-title = {{GenBank.}},
+title = {{GenBank}},
 journal = {Nucleic Acids Research},
 year = {2012},
 volume = {40},
 number = {Database issue},
 pages = {D48--53},
-month = jan
+month = jan,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=22144687&retmode=ref&cmd=prlinks}
 }
 
 @article{Gernandt:2008df,
 author = {Gernandt, David S. and Magallon, Susana and Lopez, Gretel Geada and Flores, Omar Zeron and Willyard, Ann and Liston, Aaron},
-title = {{Use of Simultaneous Analyses to Guide Fossil-Based Calibrations of Pinaceae Phylogeny}},
+title = {{Use of simultaneous analyses to guide fossil-based calibrations of Pinaceae phylogeny}},
 journal = {International Journal Of Plant Sciences},
 year = {2008},
 volume = {169},
 number = {8},
-pages = {1086--1099}
+pages = {1086--1099},
+url={http://web.ebscohost.com/ehost/detail?sid=df0248f3-f8cc-4b19-9f27-6d88715a4381%40sessionmgr15&vid=1&hid=14&bdata=JkF1dGhUeXBlPWlwLHVybCxjb29raWUsdWlkJnNpdGU9ZWhvc3QtbGl2ZSZzY29wZT1zaXRl#db=a9h&AN=35434934}
 }
 
 @article{Willyard:2007in,
@@ -808,29 +879,32 @@ year = {2007},
 volume = {24},
 number = {1},
 pages = {90--101},
-month = jan
+month = jan,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=16997907&retmode=ref&cmd=prlinks}
 }
 
 @article{Pagel:2004ic,
 author = {Pagel, Mark M and Meade, Andrew A and Barker, Daniel D},
 title = {{Bayesian estimation of ancestral character states on phylogenies.}},
-journal = {Systematic biology},
+journal = {Systematic Biology},
 year = {2004},
 volume = {53},
 number = {5},
 pages = {673--684},
-month = oct
+month = oct,
+url={http://www.jstor.org/stable/4135357}
 }
 
 @article{Eckert:2006iw,
-author = {Eckert, Andrew J AJ and Hall, Benjamin D BD},
+author = {Eckert, Andrew J and Hall, Benjamin D},
 title = {{Phylogeny, historical biogeography, and patterns of diversification for Pinus (Pinaceae): phylogenetic tests of fossil-based hypotheses.}},
-journal = {Molecular phylogenetics and evolution},
+journal = {Molecular Phylogenetics and Evolution},
 year = {2006},
 volume = {40},
 number = {1},
 pages = {166--182},
-month = jul
+month = jul,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=16621612&retmode=ref&cmd=prlinks}
 }
 
 
